--- a/source/stylesheets/pages/_project.scss
+++ b/source/stylesheets/pages/_project.scss
@@ -18,3 +18,15 @@
     }
   }
 }
+
+.project-title {
+  text-align: center;
+  text-shadow: 0 1px 1px;
+  margin-bottom: 2rem;
+  margin-top: 3rem;
+  color: #A6A2A2;
+
+  span {
+    color: #A31621;
+  }
+}
